# StayActive

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.github/actions/setup-project/: action.yml
.github/workflows/: ci-pr.yml  release-main.yml  release-tag.yml
docs/: start.md
docs/ci/: github-actions-pipeline.md
scripts/: run-dev-app.sh
scripts/ci/: commands.sh  generate-release-metadata.sh  validate-release-tag.sh
src/: App.tsx  RegionPickerPage.tsx  SettingsPage.tsx  TimerPickerPage.tsx  featureFlags.ts  i18n.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/permission/: mod.rs
src-tauri/src/timer/: mod.rs
src/locales/: en.json  zh.json
tests/ci/: pipeline-visibility.test.sh  pr-fork-safety.test.sh  pr-trigger-events.test.sh  release-main-trigger-order.test.sh  release-metadata-schema.test.sh  release-tag-trigger.test.sh  traceability-fields.test.sh
